<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Visitingcard"
    android:background="@color/black"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white">


        <RelativeLayout
            android:id="@+id/left"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <RelativeLayout
                android:id="@+id/inside"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:id="@+id/nameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="false"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/nameText"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/degreeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nameText"
                    android:layout_centerHorizontal="false"
                    android:layout_marginTop="1dp"
                    android:paddingLeft="10dp"
                    android:text="@string/degreeText"
                    android:textColor="@color/black"
                    android:textSize="12sp"></TextView>

                <TextView
                    android:id="@+id/designationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/degreeText"
                    android:layout_centerHorizontal="false"
                    android:layout_marginTop="1dp"
                    android:paddingLeft="10dp"
                    android:text="@string/designationText"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/phoneText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/designationText"
                    android:layout_alignParentEnd="false"
                    android:paddingLeft="10dp"
                    android:layout_centerHorizontal="false"
                    android:layout_marginTop="1dp"
                    android:paddingRight="10dp"
                    android:autoLink="phone"
                    android:textColorLink="@color/black"
                    android:text="@string/phoneText"
                    android:textColor="@color/black"
                    android:textSize="12sp"></TextView>

                <TextView
                    android:id="@+id/emailText"
                    android:autoLink="email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/phoneText"
                    android:paddingLeft="10dp"
                    android:layout_alignParentEnd="false"
                    android:layout_centerHorizontal="false"
                    android:layout_marginTop="1dp"
                    android:paddingRight="10dp"
                    android:text="@string/emailText"
                    android:textColorLink="@color/black"
                    android:textColor="@color/black"
                    android:textSize="12sp"></TextView>
            </RelativeLayout>

            <ImageView
                android:id="@+id/image"
                android:layout_width="93dp"
                android:layout_height="84dp"
                android:layout_alignRight="@id/inside"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="22dp"
                android:src="@drawable/image"
                >

            </ImageView>

        </RelativeLayout>
        <TextView
            android:id="@+id/companyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/left"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:paddingLeft="15dp"
            android:text="@string/companyText"
            android:textColor="#0C2093"
            android:textSize="16sp"
            android:textStyle="bold"></TextView>
        <TextView
            android:id="@+id/services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/companyText"
            android:layout_alignEnd="@id/companyText"
            android:layout_centerHorizontal="false"
            android:layout_marginTop="1dp"
            android:paddingRight="40dp"
            android:text="@string/servicesText"
            android:textColor="@color/black"
            android:textSize="8sp"></TextView>
        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/services"
            android:padding="5dp">

            <TextView
                android:id="@+id/telephone"
                android:layout_width="130dp"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:layout_alignParentLeft="true"
                android:paddingRight="10dp"
                android:autoLink="phone"
                android:textColorLink="@color/black"
                android:text="@string/telephoneText"
                android:textColor="@color/black"

                ></TextView>
            <TextView
                android:id="@+id/oEmail"
                android:layout_width="120dp"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:layout_toRightOf="@id/telephone"
                android:paddingRight="8dp"
                android:autoLink="email"
                android:textColorLink="@color/black"
                android:text="@string/oEmailText"
                android:textColor="@color/black"

                ></TextView>
            <TextView
                android:id="@+id/address"
                android:layout_width="140dp"
                android:layout_height="55dp"
                android:layout_marginLeft="-8dp"
                android:layout_toRightOf="@id/oEmail"
                android:autoLink="map"
                android:textColorLink="@color/black"
                android:text="@string/AddressText"
                android:textColor="@color/black"
                android:textSize="10sp"></TextView>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>